traces/bug_290.txt
#290
kv_engine/tests/mcbp/mcbp_bench.cc:96: error: Static Initialization Order Fiasco
  Initializer of benchmark_uniq_10McbpValidatorBench_AddBench_Benchmark accesses global variable from a different translation unit: cb::userdataEndTag|kv_engine/utilities/logtags.cc.

kv_engine/tests/mcbp/mcbp_bench.cc:96:1: initialization of benchmark_uniq_10McbpValidatorBench_AddBench_Benchmark
94. BENCHMARK_REGISTER_F(McbpValidatorBench, GetBench);
95. BENCHMARK_REGISTER_F(McbpValidatorBench, SetBench);
96. BENCHMARK_REGISTER_F(McbpValidatorBench, AddBench);
    ^

kv_engine/tests/mcbp/mcbp_bench.cc:96:1: call to McbpValidatorBench_AddBench_Benchmark::McbpValidatorBench_AddBench_Benchmark
94. BENCHMARK_REGISTER_F(McbpValidatorBench, GetBench);
95. BENCHMARK_REGISTER_F(McbpValidatorBench, SetBench);
96. BENCHMARK_REGISTER_F(McbpValidatorBench, AddBench);
    ^

kv_engine/tests/mcbp/mcbp_bench.cc:78:1: call to McbpValidatorBench::McbpValidatorBench
  76. }
  77. 
  78. BENCHMARK_DEFINE_F(McbpValidatorBench, AddBench)(benchmark::State& state) {
      ^
  79.     request.message.header.request.setExtlen(8);
  80.     request.message.header.request.setKeylen(10);

kv_engine/tests/mcbp/mcbp_bench.cc:33:28: call to MockConnection::MockConnection
    31.     }
    32. 
    33.     McbpValidatorBench() : connection(thread) {
                                   ^
    34.     }
    35. 

kv_engine/tests/mcbp/mock_connection.h:21:59: call to Connection::Connection
      19. class MockConnection : public Connection {
      20. public:
      21.     explicit MockConnection(struct FrontEndThread& thr) : Connection(thr) {
                                                                    ^
      22.     }
      23. };

kv_engine/daemon/connection.cc:1317:5: call to Connection::updateDescription
        1315.       connectedToSystemPort(false),
        1316.       ssl(false) {
        1317.     updateDescription();
                  ^
        1318.     cookies.emplace_back(std::make_unique<Cookie>(*this));
        1319.     setConnectionId("unknown:0");

kv_engine/daemon/connection.cc:371:24: call to cb::tagUserData
          369.             description += "System, ";
          370.         }
          371.         description += cb::tagUserData(user.name);
                                      ^
          372. 
          373.         if (user.domain == cb::sasl::Domain::External) {

kv_engine/utilities/logtags.h:38:12: access to cb::userdataEndTag|kv_engine/utilities/logtags.cc
          36.  */
          37. static inline std::string tagUserData(const std::string& data) {
          38.     return userdataStartTag + data + userdataEndTag;
                         ^
          39. }
          40. 
